@@ -3,5 +3,6 @@
 [ModuleSettings]
 ExtensionRepositories[]=data_import
 ModuleList[]=data_import
+ModuleList[]=csv_export
 
 */ ?>
